tests/type-error/classes/MissingInstanceMethods.vix
class Test a where
  f : a
  g : a

instance Test Int where
  f = 1
